--- a/0x04-TypeScript/task_0/package.json
+++ b/0x04-TypeScript/task_0/package.json
@@ -1,6 +1,7 @@
 {
   "name": "typescript_dependencies",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start-dev": "webpack-dev-server --open",
@@ -17,6 +18,7 @@
     "@typescript-eslint/eslint-plugin": "^2.4.0",
     "@typescript-eslint/parser": "^2.4.0",
     "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^6.4.0",
     "fork-ts-checker-webpack-plugin": "^1.5.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
@@ -27,6 +29,5 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
-  },
-  "description": ""
+  }
 }
